--- a/03.UserLogin_Template/app/templates/auth/login.html
+++ b/03.UserLogin_Template/app/templates/auth/login.html
@@ -1,14 +1,44 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky{% endblock %}
+{% extends "auth/base_login.html" %}
 
-{% block page_content %}
-<div class="page-header">
+{% import "auth/wtf_login.html" as wtf %}
 
-{{ wtf.quick_form(form) }}  {# 入口调用  #}
+{% block title %}ZEOS - Login{% endblock %}
 
+
+
+{% block content %}
+
+
+
+<div class="container">
+{#  模板中显示 flash 消息的功能 #}
+{% for message in get_flashed_messages() %}
+<div class="alert alert-warning">
+<button type="button" class="close" data-dismiss="alert">&times;</button>
+{{ message }}
+</div>
+{% endfor %}
 </div>
 
 
-{% endblock %}
+
+<body class="login_body">
+  <div class="container-fluid">
+    <div id="logo">
+      <span>
+        <h1>LinuxHub</h1>
+        <p>泽泽运维平台</p>
+      </span>
+
+    </div>
+    <div class="loginbox center-block">
+		{{ wtf.quick_form(form) }}  {# 入口调用  #} 
+     </div>
+  </div>
+</body>
+
+
+
+
+{% endblock %} 
